+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 alpha 1
================================

*Release date: XX-XXX-20XX*

Core and Builtins
-----------------

- Remove restrictions on precision when formatting floats.  E.g.,
  "%.120g" % 1e-100 used to raise OverflowError, but now gives the
  requested 120 significant digits instead.

- Add Py3k warnings for parameter names in parenthesis.

- Issue #7362: Give a proper error message for def f((x)=3): pass.

- Issue #7085: Fix crash when importing some extensions in a thread
  on MacOSX 10.6.

- Issue #7117: repr(x) for a float x returns a result based on the
  shortest decimal string that's guaranteed to round back to x under
  correct rounding (with round-half-to-even rounding mode).
  Previously it gave a string based on rounding x to 17 decimal digits.
  repr(x) for a complex number behaves similarly.  On platforms where
  the correctly-rounded strtod and dtoa code is not supported (see below),
  repr is unchanged.

- Issue #7117: On almost all platforms: float-to-string and
  string-to-float conversions within Python are now correctly rounded.
  Places these conversions occur include: str for floats and complex
  numbers; the float and complex constructors; old-style and new-style
  numeric formatting; serialization and deserialization of floats and
  complex numbers using marshal, pickle and json; parsing of float and
  imaginary literals in Python code; Decimal-to-float conversion.

  The conversions use a Python-adapted version of David Gay's
  well-known dtoa.c, providing correctly-rounded strtod and dtoa C
  functions.  This code is supported on Windows, and on Unix-like
  platforms using gcc, icc or suncc as the C compiler.  There may be a
  small number of platforms on which correct operation of this code
  cannot be guaranteed, so the code is not used: notably, this applies